# meowsn

./: Cargo.toml  Cross.toml  PKGBUILD  README.md  build.rs  meowsn.Dockerfile
.github/workflows/: arch.yml  flatpak.yml  macos.yml  rust.yml
assets/: Info.plist  cargo-sources.json  meowsn.desktop  meowsn.icns  meowsn.metainfo.xml  net.camposs.meowsn.desktop  net.camposs.meowsn.metainfo.xml  net.camposs.meowsn.yml
src/: client_wrapper.rs  contact_repository.rs  icedm_window.rs  keyboard_listener.rs  main.rs  main_window.rs  meowsn.rs  msnp_events.rs  msnp_listener.rs  pick_display_picture.rs  settings.rs  sign_in.rs  sign_in_async.rs  sign_in_status.rs  sqlite.rs  status.rs  svg.rs  switchboard_and_participants.rs  visuals.rs  window_type.rs
src/enums/: contact_list_status.rs  mod.rs  sign_in_status.rs  window_type.rs
src/helpers/: get_config.rs  get_tabs.rs  mod.rs  notify_new_version.rs  pick_display_picture.rs  run_future.rs  sign_in_async.rs
src/models/: config.rs  contact.rs  display_picture.rs  message.rs  mod.rs  msn_object.rs  sign_in_return.rs  switchboard_and_participants.rs  tab.rs  user.rs
src/screens/: add_contact.rs  contacts.rs  conversation.rs  dialog.rs  invite.rs  meowsn_window.rs  mod.rs  personal_settings.rs  screen.rs  sign_in.rs
src/screens/contacts/: bordered_container.rs  category_collapsing_header.rs  contact_map.rs  contacts.rs  mod.rs  status_selector.rs  transparent_button.rs
src/screens/conversation/: bordered_container.rs  contacts_display_pictures.rs  conversation.rs  messages.rs  mod.rs  new_message_editor.rs  toggle_button.rs
src/screens/sign_in/: bordered_container.rs  mod.rs  sign_in.rs  status_selector.rs  transparent_button.rs
src/widgets/: custom_combo_box.rs  custom_fill_combo_box.rs  left_label_combo_box.rs  mod.rs  pick_list_with_menu_width.rs  simpler_drop_down.rs  window_fill_combo_box.rs
